--- a/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
@@ -16,17 +16,20 @@
     </div>
     <!-- end hero-header -->
     <div class="container pt-10 pb-30">
-        @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.Breadcrumbs.Breadcrumbs))))
+        @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.Breadcrumbs.Breadcrumbs))
         <div class="row mb-10">
             <div class="col-md-8">
                 <div class="section-title-02">
-                    <h3><span>Ресторани<small class="ml-10">/ 253 ресторанів</small></span></h3>
+                    <h3><span>Ресторани<small class="ml-10">/ @Model.PlacesTotal ресторанів</small></span></h3>
                 </div>
             </div>
         </div>
         <div class="row">
-            @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesFilters.PlacesFilters))
-            @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesList.PlacesList))
+            @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesFilters.PlacesFilters), new { placesIds = Model.PlacesOnPageIds })
+            <div class="col-sm-8 col-md-9">
+                @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesList.PlacesList))
+                @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesPagination.PlacesPagination), new { placesCount = Model.PlacesTotal })
+            </div>
         </div>
     </div>
 </div>
