--- a/FlexTemplate.PresentationLayer/WebServices/Components/PlacesPagination/Default.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Components/PlacesPagination/Default.cshtml
@@ -2,7 +2,7 @@
 <div class="pagination-wrapper">
     <div class="GridLex-grid-middle GridLex-grid-noGutter">
         <div class="GridLex-col-6_sm-12_xs-12">
-            <div class="text-right text-center-sm mb-10-sm">Showing 1 to 24 from 253 restaurants </div>
+            <div class="text-right text-center-sm mb-10-sm">Showing 1 to 24 from @Model.PlacesCount restaurants </div>
         </div>
         <div class="GridLex-col-6_sm-12_xs-12">
             <nav>
