--- a/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
+++ b/FlexTemplate.PresentationLayer/WebServices/Home/Places/Index.cshtml
@@ -27,8 +27,9 @@
         <div class="row">
             @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesFilters.PlacesFilters), new { placesIds = Model.PlacesOnPageIds })
             <div class="col-sm-8 col-md-9">
+                @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesSorting.PlacesSorting))
                 @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesList.PlacesList))
-                @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesPagination.PlacesPagination), new { placesCount = Model.PlacesTotal })
+                @await Component.InvokeAsync(typeof(FlexTemplate.PresentationLayer.WebServices.Components.PlacesPagination.PlacesPagination), new {placesCount = Model.PlacesTotal})
             </div>
         </div>
     </div>
